Fix truncation on Chrome

--- a/client/main.css
+++ b/client/main.css
@@ -102,6 +102,7 @@ a:hover {
 .entryCell .content {
   flex-grow: 1;
   margin-left: 1em;
+  min-width: 0; /* Allow truncation past intrinsic content width. */
 }
 
 .entryCell .heading {
@@ -145,7 +146,6 @@ a:hover {
 }
 
 .entryCell .description {
-  display: block;
   font-size: 15px;
   line-height: 22px;
   color: #757575;
